# libevent_http_https

./: .gitignore  CMakeLists.txt  build.bat  deploy.cmake.local  deploy.cmake.pro
Demo/: CMakeLists.txt  main.cpp
Demo/Resources/: css.qrc  icons.qrc  ry_systle.css  translators.qrc
Demo/Resources/Translator/: RY3D_Login_zh_CN.qm  RY3D_Login_zh_CN.ts
Demo/UI/: MainWindow.cpp  MainWindow.h
Demo/UI/Common/: BaseDialog.cpp  BaseDialog.h  CustomControls.cpp  CustomControls.h  DialogTitleFrame.cpp  DialogTitleFrame.h  FramelessWidget.cpp  FramelessWidget.h  MaskWidget.cpp  MaskWidget.h  NoFocusDelegate.cpp  NoFocusDelegate.h
Demo/UI/Define/: DataStructDef.h  EnumType.h
Demo/UI/Dialog/: MessageBoxDialog.cpp  MessageBoxDialog.h
Demo/UI/Login/: LoginDialog.cpp  LoginDialog.h
Demo/UI/Network/: DownloadManager.cpp  DownloadManager.h  DownloadThread.cpp  DownloadThread.h  HttpClient.cpp  HttpClient.h  JsonManager.cpp  JsonManager.h  NetworkManager.cpp  NetworkManager.h
HttpServer/: CMakeLists.txt  main.cpp
HttpServer/HttpOperator/: http_server.cpp  http_server.h  https-common.cpp  https-common.h  utils.h
LibeventHttps/: CMakeLists.txt  https-common.c  https-server.c
SDK/: CMakeLists.txt  Demo.cpp
